--- a/tyylit.css
+++ b/tyylit.css
@@ -30,5 +30,5 @@ height:200px;
     background-color:lightcoral;
     padding: 15px;
     margin: 5px;
-    border: 5px dotted grey;
+    border: 5px solid grey;
 }
